--- a/dondEducar/dondEducar/Views/ListaEstablecimientos/_ListaEstablecimientos.cshtml
+++ b/dondEducar/dondEducar/Views/ListaEstablecimientos/_ListaEstablecimientos.cshtml
@@ -11,6 +11,7 @@
             <li>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
+                        <span class="glyphicon glyphicon-home"></span>&nbsp;
                         @Html.ActionLink(establecimiento.Nombre, "Establecimiento", "Establecimiento", new { EstablecimientoId = establecimiento.Id }, new { @class = "panel-title" })
                     </div>
                     <div class="panel-body">
