--- a/dondEducar/dondEducar/Views/Establecimiento/Establecimiento.cshtml
+++ b/dondEducar/dondEducar/Views/Establecimiento/Establecimiento.cshtml
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div id="container" class="col-md-9 col-md-offset-1">
-                        @Html.Partial("_FourSquareInfo", Model.Venue)
+                        @Html.Partial("_FourSquareInfo", Model.FourSquareViewModel)
                     </div>
                 </div>
             </div>
