Inicio de sesion obligatorio en el home

--- a/dondEducar/dondEducar/Views/Home/Index.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Index.cshtml
@@ -5,21 +5,30 @@
     </h2>
     
 </div>
-<div class="blocks">
-    <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Inicial" })'>
-        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonInicial.png")' alt="Nivel Inicial" >
-    </a>
-    <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Secundario" })'>
-        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonSecundario.png")' alt="Nivel Secundario">
-    </a>
-    <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Primario" })'>
-        <img style="width: 400px; height: 600px;" src='@Url.Content("~/Content/images/botonPrimario.png")' alt="Nivel Primario">
-    </a>
-    <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Otros" })'>
-        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonOtros.png")' alt="Otros tipos de Establecimientos">
-    </a>
-    <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Superior" })'>
-        <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonSuperior.png")' alt="Nivel Superior">
-    </a>
+<br />
+<div class="center">
+    @if (String.IsNullOrWhiteSpace((string)Session["AccessToken"]))
+    {
+        <a class="btn btn-primary btn-lg " href="@Session["AutenticateUrl"]"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Iniciar sesión</a>
+    }
+    else
+    {      
+        <div class="blocks">
+            <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Inicial" })'>
+                <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonInicial.png")' alt="Nivel Inicial" >
+            </a>
+            <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Secundario" })'>
+                <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonSecundario.png")' alt="Nivel Secundario">
+            </a>
+            <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Primario" })'>
+                <img style="width: 400px; height: 600px;" src='@Url.Content("~/Content/images/botonPrimario.png")' alt="Nivel Primario">
+            </a>
+            <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Otros" })'>
+                <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonOtros.png")' alt="Otros tipos de Establecimientos">
+            </a>
+            <a href='@Url.Action("ListaEstablecimientos","ListaEstablecimientos", new { nivelEducativo = "Superior" })'>
+                <img style="width: 400px; height: 300px;" src='@Url.Content("~/Content/images/botonSuperior.png")' alt="Nivel Superior">
+            </a>
+        </div>
+    }
 </div>
-<a href='@Url.Action("Importar", "Importar")' class="btn btn-primary">Importar Datos</a>
