--- a/dondEducar/dondEducar/Views/Home/Informacion.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Informacion.cshtml
@@ -6,6 +6,10 @@
 
         <p>DondEducar se propone como una herramienta para buscar escuelas, ya sea por su tipo de gestion, ubicacion o nivel educativo.</p>
         <p>Permitiendo dejar comentarios sobre las mismas y puntuandolas. </p>
+        
+        <iframe width="420" height="315" src="//www.youtube.com/embed/lt8u44rOUZM" frameborder="0" allowfullscreen></iframe>
 
     </div>
 </div>
+
+
