--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <link rel="stylesheet" href="@Url.Content("~/Content/MarkerCluster.css")"/>
     <link rel="stylesheet" href="@Url.Content("~/Content/MarkerCluster.Default.css")" />
-    //@Styles.Render("~/Content/leaflet") 
+    @*@Styles.Render("~/Content/leaflet") *@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
