--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/MarkerCluster.css")"/>
     <link rel="stylesheet" href="@Url.Content("~/Content/MarkerCluster.Default.css")" />
     @*@Styles.Render("~/Content/leaflet") *@
+    <link rel="stylesheet" href="@Url.Content("~/Content/site.css")"/>
+    <link rel="stylesheet" href="@Url.Content("~/Content/foursquare-main.css")"/>
+    <link rel="stylesheet" href="@Url.Content("~/Content/foursquare-venue.css")" />
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
