Fix url mapa, boton verde

--- a/dondEducar/dondEducar/Views/Establecimiento/_FourSquareInfo.cshtml
+++ b/dondEducar/dondEducar/Views/Establecimiento/_FourSquareInfo.cshtml
@@ -141,7 +141,7 @@
                             </div>*@
                     </div>
                     <div class="buttonArea">
-                        <button id="shareTipButton" class="shareTipButton greenButton" tabindex="2">Publicar</button>
+                        <button id="shareTipButton" class="btn btn-success" tabindex="2">Publicar</button>
                     </div>
                 </div>
             </div>
