--- a/dondEducar/dondEducar/Views/Home/Informacion.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Informacion.cshtml
@@ -2,11 +2,18 @@
 
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <h2>Informacion</h2>
-
-        <p>DondEducar se propone como una herramienta para buscar escuelas, ya sea por su tipo de gestion, ubicacion o nivel educativo.</p>
-        <p>Permitiendo dejar comentarios sobre las mismas y puntuandolas. </p>
-        
+        <h2><strong>“Dondeducar”</strong>, la educación al alcance de tu mano!</h2>
+        <br />
+        <p><strong>dondeducar</strong> es una aplicación que tiene como objetivo facilitar la búsqueda de instituciones educativas a los padres con inquietudes sobre la educación de sus hijos.</p>
+        <p>Orientada a establecimientos educativos de la Ciudad,  de gestión tanto pública como privada, pasando por todos los niveles educativos (desde el inicial hasta el superior e institutos de educación especial) y con mapas que indican la ubicación geográfica de los mismos.</p> 
+        <p>Esta aplicación incorpora la posibilidad de que los usuarios puedan compartir sus opiniones y ver el rating que tiene cada institución, afianzando una comunidad de padres que se interesan por la educación de sus hijos. </p>
+        <p>Los chicos crecen, las dificultades para decidir sobre su educación también. Porque la educación empieza en casa y continúa en la escuela, decidir en dónde hacerlo ahora no es una tarea sencilla.</p> 
+        <p>¡<strong>dondeducar</strong> es la solución!</p>
+        <br />
+        <p>Si bien hoy en día “dondeducar” solamente dispone de establecimientos educativos, en un futuro agregaremos eventos infantiles y guarderías, para que los padres conozcan opciones para el cuidado de sus pequeños.</p>
+        <p>Este emprendimiento es totalmente gratuito, ¡y queremos que siga asi! No nos parece correcto aceptar propaganda o pedir una remuneración por aparecer en nuestra página. Ya que eso puede favorecer a una institución en base al dinero que invirtió, y no a su nivel educativo. </p>
+        <p>Por esto <strong>dondeducar</strong> sólo aceptará donaciones,  utilizando así un modelo similar a Greenpeace o Wikipedia.</p>
+        <br />
         <iframe width="420" height="315" src="//www.youtube.com/embed/lt8u44rOUZM" frameborder="0" allowfullscreen></iframe>
 
     </div>
