--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -10,14 +10,11 @@
 
     @Styles.Render("~/Content/themes/base/css")
     @Styles.Render("~/Content/bootstrap")
-    @*@Styles.Render("~/Content/css")     *@
+    @Styles.Render("~/Content/css")    
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-    <link rel="stylesheet" href="@Url.Content("~/Content/MarkerCluster.css")"/>
+    <link rel="stylesheet" href="@Url.Content("~/Content/MarkerCluster.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/MarkerCluster.Default.css")" />
     @*@Styles.Render("~/Content/leaflet") *@
-    <link rel="stylesheet" href="@Url.Content("~/Content/site.css")"/>
-    <link rel="stylesheet" href="@Url.Content("~/Content/foursquare-main.css")"/>
-    <link rel="stylesheet" href="@Url.Content("~/Content/foursquare-venue.css")" />
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
