--- a/dondEducar/dondEducar/Views/Home/Informacion.cshtml
+++ b/dondEducar/dondEducar/Views/Home/Informacion.cshtml
@@ -14,7 +14,7 @@
         <p>Este emprendimiento es totalmente gratuito, ¡y queremos que siga asi! No nos parece correcto aceptar propaganda o pedir una remuneración por aparecer en nuestra página. Ya que eso puede favorecer a una institución en base al dinero que invirtió, y no a su nivel educativo. </p>
         <p>Por esto <strong>dondeducar</strong> sólo aceptará donaciones,  utilizando así un modelo similar a Greenpeace o Wikipedia.</p>
         <br />
-        <iframe width="420" height="315" src="//www.youtube.com/embed/lt8u44rOUZM" frameborder="0" allowfullscreen></iframe>
+        <iframe width="420" height="315" src="//www.youtube.com/embed/180HPl3_b74" frameborder="0" allowfullscreen></iframe>
 
     </div>
 </div>
