Argego meta para bing

--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
+    <meta name="msvalidate.01" content="E60BA34DC26DA83C5074EF191C46E7E4" />
     <title>@ViewBag.Title - dondEducar.com.ar</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
