Comiteo de nuevo a ver si anda el mapa

--- a/dondEducar/dondEducar/Views/ListaEstablecimientos/_MapaEstablecimientos.cshtml
+++ b/dondEducar/dondEducar/Views/ListaEstablecimientos/_MapaEstablecimientos.cshtml
@@ -4,7 +4,7 @@
 <script src="http://servicios.usig.buenosaires.gov.ar/usig-js/3.0/usig.Punto.min.js" type="text/javascript"></script> 
  *@   
 
- <div id="mapa-completo" class="mapa-completo" style="height:100%; width: 100%">
+ <div id="mapa-completo" class="mapa-completo" style="height:500px; width: 100%">
  </div>
 
 <script type="text/javascript">
